# MB2024

./: Cargo.toml  README.md  data.txt  gnu.gnp  profile.json
benches/: my_benchmark.rs
data/: destinos_palets_126.txt  destinos_palets_168.txt  destinos_palets_84.txt  matriz_distancias_25.txt  matriz_distancias_38.txt  matriz_distancias_50.txt
src/: lib.rs  main.rs
src/algo/: genetic.rs  grasp.rs  greedy.rs  greedy_exp.rs  ils.rs  local_search_bf.rs  memetic.rs  mod.rs  random_search.rs  simulated_annealing.rs  tabu_search.rs
