[package]
name = "practica_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.10.0"


[[bench]]
harness=false
name="my_benchmark"
